kubernetes/db-deployment.yml
# Usar secrets para credenciais
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-estacionamento-deployment
  labels:
    app: db-estacionamento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-estacionamento
  template:
    metadata:
      labels:
        app: db-estacionamento
    spec:
      containers:
        - name: db-estacionamento
          image: imagem-db-estacionamento
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-notificacao-deployment
  labels:
    app: db-notificacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-notificacao
  template:
    metadata:
      labels:
        app: db-notificacao
    spec:
      containers:
        - name: db-notificacao
          image: imagem-db-notificacao
          imagePullPolicy: Never
          ports:
            - containerPort: 3307
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-pagamento-deployment
  labels:
    app: db-pagamento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-pagamento
  template:
    metadata:
      labels:
        app: db-pagamento
    spec:
      containers:
        - name: db-pagamento
          image: imagem-db-pagamento
          imagePullPolicy: Never
          ports:
            - containerPort: 3308
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-usuario-deployment
  labels:
    app: db-usuario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-usuario
  template:
    metadata:
      labels:
        app: db-usuario
    spec:
      containers:
        - name: db-usuario
          image: imagem-db-usuario
          imagePullPolicy: Never
          ports:
            - containerPort: 3309
