kubernetes/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: localhost/imagem-front
          imagePullPolicy: Never
          ports:
            - containerPort: 80
