kubernetes/gestao-veiculos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestao-veiculos-deployment
  labels:
    app: gestao-veiculos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestao-veiculos
  template:
    metadata:
      labels:
        app: gestao-veiculos
    spec:
      containers:
        - name: gestao-veiculos
          image: imagem-gestao-veiculos:latest
          ports:
            - containerPort: 8880
