kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: localhost/redis:latest
          ports:
            - containerPort: 6379
          args: ["--requirepass", "$(REDIS_PASSWORD)"]
          # Adicionar secret para a senha do Redis
