kubernetes/sensor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-deployment
  labels:
    app: sensor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor
  template:
    metadata:
      labels:
        app: sensor
    spec:
      containers:
        - name: sensor
          image: localhost:4000/imagem-sensor
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
