kubernetes/servicos-deployment.yml
# Usar secrets para credenciais e adicionar credenciais Cognito
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestao-veiculos-deployment
  labels:
    app: gestao-veiculos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestao-veiculos
  template:
    metadata:
      labels:
        app: gestao-veiculos
    spec:
      containers:
        - name: gestao-veiculos
          image: imagem-gestao-veiculos
          imagePullPolicy: Never
          ports:
            - containerPort: 8880
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificacoes-deployment
  labels:
    app: notificacoes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificacoes
  template:
    metadata:
      labels:
        app: notificacoes
    spec:
      containers:
        - name: notificacoes
          image: imagem-notificacoes
          imagePullPolicy: Never
          ports:
            - containerPort: 8881
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagamento-deployment
  labels:
    app: pagamento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagamento
  template:
    metadata:
      labels:
        app: pagamento
    spec:
      containers:
        - name: pagamento
          image: imagem-pagamento
          imagePullPolicy: Never
          ports:
            - containerPort: 8882  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vagas-deployment
  labels:
    app: vagas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vagas
  template:
    metadata:
      labels:
        app: vagas
    spec:
      containers:
        - name: vagas
          image: imagem-vagas
          imagePullPolicy: Never
          ports:
            - containerPort: 8883
