kubernetes/vagas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vagas-deployment
  labels:
    app: vagas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vagas
  template:
    metadata:
      labels:
        app: vagas
    spec:
      containers:
        - name: vagas
          image: imagem-vagas:latest
          ports:
            - containerPort: 8883
