kubernetes/estacionamento-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-estacionamento-service
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
  selector:
    app: db-estacionamento
