kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: front
