kubernetes/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app: gateway
