kubernetes/gestao-veiculos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestao-veiculos-service
spec:
  ports:
    - port: 8880
      targetPort: 8880
      protocol: TCP
  type: ClusterIP
  selector:
    app: gestao-veiculos
