kubernetes/notificacao-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-notificacao-service
spec:
  ports:
    - port: 3307
      targetPort: 3307
      protocol: TCP
  type: ClusterIP
  selector:
    app: db-notificacao
