kubernetes/notificacoes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificacoes-service
spec:
  ports:
    - port: 8881
      targetPort: 8881
      protocol: TCP
  type: ClusterIP
  selector:
    app: notificacoes
