kubernetes/pagamento-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-pagamento-service
spec:
  ports:
    - port: 3308
      targetPort: 3308
      protocol: TCP
  type: ClusterIP
  selector:
    app: db-pagamento
