kubernetes/pagamento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pagamento-service
spec:
  ports:
    - port: 8882
      targetPort: 8882
      protocol: TCP
  type: ClusterIP
  selector:
    app: pagamento
