kubernetes/sensor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
  selector:
    app: sensor
