kubernetes/servicos-services.yml
apiVersion: v1
kind: Service
metadata:
  name: gestao-veiculos-service
spec:
  ports:
    - port: 8880
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: gestao-veiculos
---
apiVersion: v1
kind: Service
metadata:
  name: notificacoes-service
spec:
  ports:
    - port: 8881
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: notificacoes
---
apiVersion: v1
kind: Service
metadata:
  name: pagamento-service
spec:
  ports:
    - port: 8882
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: pagamento
---
apiVersion: v1
kind: Service
metadata:
  name: vagas-service
spec:
  ports:
    - port: 8883
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: vagas
