kubernetes/usuario-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-usuario-service
spec:
  ports:
    - port: 3309
      targetPort: 3309
      protocol: TCP
  type: ClusterIP
  selector:
    app: db-usuario
