kubernetes/vagas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vagas-service
spec:
  ports:
    - port: 8883
      targetPort: 8883
      protocol: TCP
  type: ClusterIP
  selector:
    app: vagas
