kubernetes/front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: vagaxpress.com
      http:
        paths:
          - path: /gateway.php(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
